@@ -1,3 +1,9 @@
+Tue Sep 15 10:48:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* common.mk (install-all): target to install all.
+
+	* instruby.rb: merged from trunk.
+
 Tue Sep 15 04:25:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (RDOCTARGET): use install-all.  [ruby-dev:39334]
